--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
   <form class="setup-wizard-form"
         method="post"
         enctype="multipart/form-data"
+        action="https://js.dump.academy/code-and-magick"
         autocomplete="off">
 
     <div class="setup-title">
@@ -116,7 +117,7 @@
           </svg>
         </div>
         <input type="hidden" name="coat-color" value="rgb(101, 137, 164)">
-        <input type="hidden" name="eyes-color" value="black">
+        <input type="hidden" name="eyes-color" value="red">
       </div>
 
       <div class="setup-fireball-wrap">
@@ -165,7 +166,7 @@
                                                               width="130">Сделано в HTML Academy</a>в 2017 году</p>
 </footer>
 
-<template id="similar-wizard-template" style="display: none">
+<template id="similar-wizard-template"  style="display: none">
   <div class="setup-similar-item">
     <div class="setup-similar-content">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 62 86" class="setup-similar-wizard">
